remove JDK 1.2 specifics (part 2)
git-svn-id: https://svn.apache.org/repos/asf/tomcat@264317 13f79535-47bb-0310-9956-ffa450edef68